compiler/plc_xml/src/model/snapshots/plc_xml__model__variables__tests__block_inout_variable.snap
---
source: compiler/plc_xml/src/model/variables.rs
expression: "BlockVariable::visit(&mut reader)"
---
Ok(
    [
        BlockVariable {
            kind: InOut,
            formal_parameter: "",
            negated: false,
            ref_local_id: None,
            edge: None,
            storage: None,
            enable: None,
        },
    ],
)
