compiler/plc_xml/src/model/snapshots/plc_xml__model__variables__tests__block_output_variable.snap
---
source: compiler/plc_xml/src/model/variables.rs
expression: "BlockVariable::visit(&mut reader)"
---
Ok(
    [
        BlockVariable {
            kind: Output,
            formal_parameter: "",
            negated: false,
            ref_local_id: None,
            edge: None,
            storage: None,
            enable: None,
        },
    ],
)
