compiler/plc_xml/src/model/snapshots/plc_xml__model__variables__tests__fbd_in_variable.snap
---
source: compiler/plc_xml/src/model/variables.rs
expression: "FunctionBlockVariable::visit(&mut reader)"
---
Ok(
    FunctionBlockVariable {
        kind: Input,
        local_id: 0,
        negated: false,
        expression: "a",
        execution_order_id: None,
        ref_local_id: None,
    },
)
