compiler/plc_xml/src/model/snapshots/plc_xml__model__variables__tests__negated_variable.snap
---
source: compiler/plc_xml/src/model/variables.rs
expression: visit_variable(&mut reader)
---
Ok(
    {
        "formalParameter": "",
        "negated": "true",
    },
)
